--- a/README
+++ b/README
@@ -1,2 +1,11 @@
-COMP 322 A2
-Using classes and pointers
+# COMP 322
+This repository stores my assignments for COMP 322 (Introduction to C++) at McGill. 
+
+# About the assignments
+Assignment 1: In this assignment we will be imitating the inner workings of the operating system by managing a piece of memory 
+of a fixed size and then enabling clients to use this memory without collision between users. 
+We will be building a Data Store manager to help us get access to chunks of memory that we can use to store integers.
+
+Assignment 2: Rebuilding A1 using OOP, custom Linked List, and pointers.
+
+Assignment 3: Building BlackJack game using OOP (in progress)
